--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "simaaps",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "18.0.2",
-    "@types/react-dom": "18.0.0",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3"
-  }
+    "name": "simaaps",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "framer-motion": "^6.2.9",
+        "next": "12.1.4",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-icons": "^4.3.1"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.23",
+        "@types/react": "18.0.0",
+        "@types/react-dom": "18.0.0",
+        "eslint": "8.13.0",
+        "eslint-config-next": "12.1.4",
+        "sass": "^1.50.0",
+        "typescript": "4.6.3"
+    },
+    "prettier": {
+        "trailingComma": "none",
+        "singleQuote": true,
+        "arrowParens": "avoid",
+        "tabWidth": 4,
+        "printWidth": 80
+    }
 }
